--- a/Recipes/recipe1.html
+++ b/Recipes/recipe1.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Dark and Stormy Banana Bread recipe</h2>
     <br>
-    <img src="../Images/" alt="Dark and Stormy Banana Bread">
+    <img src="../Images/recipe1.jpg" alt="Dark and Stormy Banana Bread">
     <br>
     <h3>Ingredients</h3>
         
