--- a/Recipes/recipe2.html
+++ b/Recipes/recipe2.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Try this one! I'm sure you'de like it</h1>
     <br>
-    <img src="../Images/" alt="Pie">
+    <img src="../Images/recipe2.jpeg" alt="Pie">
     <br>
     <h3>Ingredients</h3>
     <ul>
