--- a/Recipes/recipe3.html
+++ b/Recipes/recipe3.html
@@ -9,7 +9,7 @@
 <body>
     <h1> A simple white cake to make</h1>
     <br>
-    <img src="../Images/" height="300px" width="400px" alt=" white cake">
+    <img src="../Images/recipe3.jpg" height="300px" width="400px" alt=" white cake">
     <br>
     <p>
          This simple cake recipe was sent home from our children's school.
