--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Sayou recipes</h1>
-    <img src="/imgs/chef1-removebg-preview.png" alt="chef">
+    <img src="/Images/chef1-removebg-preview.png" alt="chef">
     <p> <strong>
         Hello there !
         Welcome to our page, you'll find here the best recipes ever.
@@ -17,9 +17,9 @@
     </p>
     <h3>Recipes</h3>
     <ul>
-        <li><a href="recipes/recipe1.html">Dark and Stormy Banana Bread</a></li>
-        <li><a href="recipes/recipe2.html">A pie</a></li>
-        <li><a href="recipes/recipe3.html">Simple white cake</a></li>
+        <li><a href="Recipes/recipe1.html">Dark and Stormy Banana Bread</a></li>
+        <li><a href="Recipes/recipe2.html">A pie</a></li>
+        <li><a href="Recipes/recipe3.html">Simple white cake</a></li>
     </ul>
 </body>
 </html>
