--- a/Recipes/recipe3.html
+++ b/Recipes/recipe3.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style1.css">
     <title>Recipe 3 || Simple Cake</title>
 </head>
 <body>
-    <h1> A simple white cake to make</h1>
+    <h2> A simple white cake to make</h2>
     <br>
     <img src="../Images/recipe3.jpg" height="300px" width="400px" alt=" white cake">
     <br>
-    <p>
-         This simple cake recipe was sent home from our children's school.
-         It is the easiest, best-tasting cake I've ever made.
-          It's great to make with the kids, especially for cupcakes.
-           Use your favorite frosting on top of this delicious cake. </h1>
-    </p>
-
     <h3>Ingredients</h3>
     <br>
     <ul>
