--- a/Recipes/recipe2.html
+++ b/Recipes/recipe2.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe 2 || A pie</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <h1>Try this one! I'm sure you'de like it</h1>
+    <h2>Try this one! I'm sure you'de like it</h2>
     <br>
     <img src="../Images/recipe2.jpeg" alt="Pie">
     <br>
