--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes || Main page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Sayou recipes</h1>
     <img src="/Images/chef1-removebg-preview.png" alt="chef">
-    <p> <strong>
+    <p> 
         Hello there !
         Welcome to our page, you'll find here the best recipes ever.
         try them and tell us !!!!
-        </strong>
+        
     </p>
     <h3>Recipes</h3>
     <ul>
